--- a/2019/02/basketball-predictions/style.css
+++ b/2019/02/basketball-predictions/style.css
@@ -99,13 +99,13 @@ i {
 .up {
   transform: rotate(-135deg);
   -webkit-transform: rotate(-135deg);
-  border-color: #009900;
+  border-color: #70C46E;
 }
 
 .down {
   transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
-  border-color: #990000;
+  border-color: #EA6060;
   margin-bottom: 10px;
 }
 
@@ -120,20 +120,21 @@ i {
 }
 
 h2.section-title {
-  border-bottom: 1px solid #e0e0e0;
-  padding-bottom: 10px;
+  /* border-bottom: 1px solid #e0e0e0; */
+  padding-bottom: 0px;
   margin-bottom: 15px;
-  margin-top: 30px;
+  margin-top: 60px;
   font-size: 48px;
 }
 
 h3.section-title {
   margin-bottom: 16px;
+  margin-top: 15px;
 }
 
 @media only screen and (min-width: 992px) {
   .match-day:first-child {
-      border-right: 1px solid #e0e0e0;
+      border-right: 1px solid #e1e4ea;
   }
 }
 
@@ -141,7 +142,7 @@ h3.section-title {
   margin-bottom: 30px;
   background-color: #f9f9f9;
   border-collapse: collapse;
-  border: 1px solid #e0e0e0;
+  border: 1px solid #e5e5e5;
 }
 
 .home-indc {
@@ -153,15 +154,16 @@ h3.section-title {
 .match-section {
   display: flex;
   flex-direction: row;
-  border-top: 1px solid #e0e0e0;
-  border-bottom: 1px solid #e0e0e0;
+  border-top: 1px solid #e5e5e5;
+  border-bottom: 1px solid #e5e5e5;
   align-items: center;
   justify-content: flex-start;
-  padding: 10px 0px;
+  padding: 12px 5px;
 }
 
 .team-name {
   margin-bottom: 0px;
+  font-size: 20px;
 }
 
 td p {
@@ -191,11 +193,10 @@ td:first-child {
 
 .win-btn {
   font-family: 'Work Sans', sans-serif;
-  background: rgb(250,84,23);
-  background: linear-gradient(25deg, rgba(250,84,23,1) 0%, rgba(255,161,127,1) 100%);
+  background: #A3AFC1;
   border: none;
   color: white;
-  padding: 15px 25px;
+  padding: 10px 25px;
   margin-left: auto;
   margin-right: 10px;
   text-align: center;
@@ -205,7 +206,7 @@ td:first-child {
 }
 
 .win-btn:hover {
-  background: linear-gradient(25deg, rgba(250,84,23,1) 0%, rgba(250,84,23,1) 100%);
+  background: #6A7D99;
 }
 
 .navbar {
@@ -216,11 +217,11 @@ td:first-child {
 }
 
 .record {
-  font-size: 20px;
+  font-size: 16px;
   padding-left: 10px;
   color: #b2b2b2;
   font-style: oblique;
-  font-family: 'Rokkitt', serif;
+  /* font-family: 'Rokkitt', serif; */
 }
 
 footer {
