--- a/2019/02/basketball-predictions/style.css
+++ b/2019/02/basketball-predictions/style.css
@@ -348,6 +348,7 @@ footer {
 .card_step {
   margin-top: 50px;
   margin-left: 80px;
+  margin-right: 10px;
 }
 
 @media only screen and (max-width: 992px) {
@@ -363,6 +364,22 @@ footer {
     height: 25vh;
     background-position: center center;
     background-size: 90%;
+  }
+
+  .tiebreakers_left {
+    margin: 0 auto;
+    width: 90%;
+  }
+
+  .tiebreakers_right {
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+    min-height: 75%;
+  }
+
+  h2.section-title {
+    font-size: 40px;
   }
 
   .standings-header {
