--- a/2019/02/basketball-predictions/style.css
+++ b/2019/02/basketball-predictions/style.css
@@ -9,6 +9,10 @@ h1, h2, h3 {
   font-weight: bold;
 }
 
+li {
+  padding-top: 10px;
+}
+
 .top-section {
   height: 50vh;
   width: 100%;
@@ -150,13 +154,13 @@ h2.section-title {
   /* border-bottom: 1px solid #e0e0e0; */
   padding-bottom: 0px;
   margin-bottom: 15px;
-  margin-top: 60px;
   font-size: 48px;
 }
 
-.tb_title {
+.tb-title {
   color: rgb(240, 117, 53);
   text-align: left;
+  padding-right: 100px;
 }
 
 h3.section-title {
@@ -299,56 +303,74 @@ footer {
   background-color: #c64b4bc7;
 }
 
-.tiebreakers_left {
+.tiebreakers-left {
   text-align: left;
   margin-left: 60px;
 }
 
-.tiebreakers_right {
+.tiebreakers-card {
   border-top: solid;
   border-width: thick;
   border-color: rgb(97, 127, 161);
-  margin-top: 65px;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  height: 75%;
-  width: 70%;
-  margin-left: 100px;
+  width: 90%;
+  margin-left: 80px;
+  text-align: right;
 }
 
-.tb_description_above {
+.tiebreaker-row {
+  margin-top: 60px;
+  margin-bottom: 30px;
+}
+
+.tiebreaker-content {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 30px 20px 10px;
+  text-align: left;
+}
+
+#tiebreaker-btn {
+  margin: 10px;
+  background: white;
+  border: none;
+  color: rgb(240, 117, 53);
+  padding: 10px 25px;
+  margin-left: auto;
+  margin-right: 10px;
+  text-align: center;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.tb-description-above {
   margin-bottom: 5px;
   margin-top: -5px;
 }
 
-.tb_description_below {
+.tb-description-below {
   margin-bottom: 0px;
 }
 
-.with_sideline {
+.with-sideline {
   padding-left: 32px;
   border-left: solid;
-  border-left-color: rgb(251, 227, 215);
+  border-left-color: rgb(240, 117, 53);
   margin-left: 15px;
 }
 
 .number {
-  margin-top: 50px;
-  margin-left: 20px;
-  background-color: rgb(247, 192, 165);
-  position: absolute;
+  background-color: rgb(240, 117, 53);
+  margin-left: 10px;
+  margin-right: 20px;
+  margin-top: 10px;
   height: 40px;
-  width: 40px;
+  min-width: 40px;
   border-radius: 50%;
   text-align: center;
   line-height: 2.4;
   color: white;
   font-weight: bold;
-}
-
-.card_step {
-  margin-top: 50px;
-  margin-left: 80px;
-  margin-right: 10px;
 }
 
 @media only screen and (max-width: 992px) {
@@ -366,16 +388,14 @@ footer {
     background-size: 90%;
   }
 
-  .tiebreakers_left {
+  .tiebreakers-left {
     margin: 0 auto;
     width: 90%;
   }
 
-  .tiebreakers_right {
-    margin-left: auto;
-    margin-right: auto;
+  .tiebreakers-card {
+    margin: 40px auto;
     width: 90%;
-    min-height: 75%;
   }
 
   h2.section-title {
@@ -383,11 +403,11 @@ footer {
   }
 
   .standings-header {
-    flex-direction: column;
     align-items: flex-start;
   }
 
   .toggle-select {
     margin-bottom: 10px;
+    background-color: white;
   }
 }
