--- a/2019/02/basketball-predictions/style.css
+++ b/2019/02/basketball-predictions/style.css
@@ -151,6 +151,17 @@ i {
   text-align: center;
 }
 
+.ad {
+  display: flex;
+  justify-content: center;
+  margin: 20px 0;
+  padding: 0;
+}
+
+.margin-top {
+  margin-top: 20px;
+}
+
 h2.section-title {
   /* border-bottom: 1px solid #e0e0e0; */
   padding-bottom: 0px;
@@ -329,7 +340,7 @@ footer {
 }
 
 .tiebreaker-row {
-  margin-top: 60px;
+  margin-top: 20px;
   margin-bottom: 30px;
 }
 
