--- a/2019/03/penn-bracket/css/style.css
+++ b/2019/03/penn-bracket/css/style.css
@@ -31,6 +31,10 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: 'Archivo Narrow', sans-serif;
   margin-top: 70px;
@@ -202,6 +206,43 @@ footer {
   text-align: center;
   text-transform: uppercase;
   color: #201c1c;
+  margin-bottom: 20px;
+}
+
+/* EMBED RESPONSIVLY */
+.embed-container {
+  position: relative;
+  padding-bottom: 400px;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+}
+
+.embed-container iframe, .embed-container object, .embed-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  max-height: 400px;
+}
+
+.vote-btn {
+  background-color: #495cd3;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.vote-btn:hover {
+  color: white !important;
+  background-color: #6675d6;
 }
 
 @media screen and (max-width: 1400px) {
@@ -219,5 +260,3 @@ footer {
     margin-right: -500px;
   }
 }
-
-
