--- a/2019/03/penn-bracket/css/style.css
+++ b/2019/03/penn-bracket/css/style.css
@@ -212,9 +212,9 @@ footer {
 /* EMBED RESPONSIVLY */
 .embed-container {
   position: relative;
-  padding-bottom: 600px;
+  padding-bottom: 9000px;
   height: 0;
-  overflow: hidden;
+  overflow-y: scroll;
   max-width: 100%;
 }
 
@@ -224,7 +224,12 @@ footer {
   left: 0;
   width: 100%;
   height: 100%;
-  max-height: 600px;
+}
+
+.form {
+  width: 100vw;
+  margin: 0 auto;
+  height: 100vh;
 }
 
 .vote-btn {
