--- a/2019/09/football-preview/style.css
+++ b/2019/09/football-preview/style.css
@@ -154,13 +154,36 @@ footer {
 
 .standings-table{
   width: 100%;
-  font-size: 24px;
-  color: black;
+  font-size: 18px;
+  color: white;
   font-weight: 500;
 }
 
 .standings-table .right{
   float: right;
+  padding-top: 2px;
+  border: 1px solid #63C083;
+  text-align: center;
+  width: 70%;
+  margin-bottom: 10px;
+  font-size: 14px;
+}
+
+.filled-cell {
+  background-color: #63C083
+}
+
+.numbered {
+  counter-reset: rowNumber;
+}
+.numbered tr {
+  counter-increment: rowNumber;
+}
+.numbered tr td:first-child::before {
+  content: counter(rowNumber);
+  min-width: 1em;
+  margin-right: 0.5em;
+  color: #F6C415;
 }
 
 .lines {
