added labels to pictures & resized

--- a/2019/09/football-preview/style.css
+++ b/2019/09/football-preview/style.css
@@ -345,6 +345,9 @@ footer {
   width: 100%;
   position: absolute;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
 .welcome-block {
@@ -356,9 +359,9 @@ footer {
 }
 
 .article-title {
-	margin-bottom: 10px;
+	/* margin-bottom: 10px;
 	margin-left: 10px;
-  margin-right: 10px;
+  margin-right: 10px; */
 	padding: 10px 15px;
 	color: white;
 	font-weight: bold;
@@ -425,13 +428,13 @@ footer {
 }
 
 .article {
-	display: flex;
+	/* display: flex; */
 	align-items: flex-end;
-	position: relative;
+	/* position: relative; */
 	background-position: center;
 	background-size: cover;
   margin-bottom: 20px;
-	height: 500px;
+	/* height: 500px; */
 }
 
 .youtube-embed {
@@ -487,15 +490,15 @@ footer {
 }
 
 .a10{
-  background-image: url("https://snworksceo.imgix.net/dpn/bc1775ce-1b72-4815-8f7a-a07dea57aab3.sized-1000x1000.jpg?w=1000");
+  background-image: url("https://snworksceo.imgix.net/dpn/b5cba382-68a2-43ea-854c-45616eb8d648.sized-1000x1000.jpg?w=1000");
 }
 
 .a11{
-  background-image: url("https://snworksceo.imgix.net/dpn/6021853d-2e42-4dde-9938-1d26162baf43.sized-1000x1000.jpg?w=1000");
+  background-image: url("https://snworksceo.imgix.net/dpn/f41d04dd-423a-47d7-b80f-8834befb0743.sized-1000x1000.jpg?w=1000");
 }
 
 .a12{
-  background-image: url("https://snworksceo.imgix.net/dpn/3dc75a74-ab97-4362-966e-1a360c190422.sized-1000x1000.jpg?w=1000");
+  background-image: url("https://snworksceo.imgix.net/dpn/2625e8b8-e5a8-4097-867e-f51e3a4b504a.sized-1000x1000.jpg?w=1000");
 }
 
 @media only screen and (max-width: 1630px) {
