--- a/2019/09/football-preview/style.css
+++ b/2019/09/football-preview/style.css
@@ -1,5 +1,4 @@
-/* @import url('https://fonts.googleapis.com/css?family=Open+Sans|Teko:300,400,600'); */
-@import url('https://fonts.googleapis.com/css?family=Lekton:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Barlow%7CLekton:400,700&display=swap');
 
 body {
 	font-family: 'Lekton', sans-serif;
@@ -127,7 +126,6 @@ footer {
   text-underline-position: under;
 	color: white;
 	margin-top: 10px;
-	margin-bottom: 20px;
 	padding-bottom: 15px;
 	font-size: 36px;
 }
@@ -366,10 +364,15 @@ footer {
 	/* margin-bottom: 10px;
 	margin-left: 10px;
   margin-right: 10px; */
+  font-family: 'Barlow', sans-serif;
 	padding: 10px 15px;
 	color: white;
 	/* font-weight: bold; */
 	background-color: rgba(0, 0, 0, 0.5);
+}
+
+.grey-background {
+  background-color: #425666 !important;
 }
 
 .schedule {
