--- a/2019/10/housing-guide/style.css
+++ b/2019/10/housing-guide/style.css
@@ -43,6 +43,20 @@
     justify-content: center;
     flex-direction: column;
     margin-bottom: 20px;
+    -moz-transition: all 0.3s;
+	-webkit-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+.hg-card:hover{
+    -webkit-transform:scale(1.025); /* Safari and Chrome */
+    -moz-transform:scale(1.025); /* Firefox */
+    -ms-transform:scale(1.025); /* IE 9 */
+    -o-transform:scale(1.025); /* Opera */
+     transform:scale(1.025);
+
+     cursor: pointer;
+    box-shadow: 0px 5px 20px rgba(0, 0, 0, .17);
 }
 
 .hg-card-category {
