--- a/2019/10/housing-guide/style.css
+++ b/2019/10/housing-guide/style.css
@@ -2,6 +2,11 @@
 
 body {
     font-family: 'Work Sans', sans-serif;
+    cursor: default;
+}
+
+a {
+    cursor: pointer;
 }
 .dom-visual {
     height: auto;
@@ -24,7 +29,7 @@ h1, h2 {
 
 section {
     padding-top: 60px;
-    padding-bottom: 30px;
+    padding-bottom: 60px;
 }
 
 .section-primary {
@@ -36,13 +41,13 @@ section {
     color: #798FDB;
 }
 
-.section-primary .readmore-btn {
+.section-primary .readmore-btn, .content-row .readmore-btn {
     color: #293C72;
     background-color: #FFC871;
     transition: all 0.3s;
 }
 
-.section-primary .readmore-btn:hover {
+.section-primary .readmore-btn:hover, .content-row .readmore-btn:hover {
     color: #091930;
     background-color: #F2A43D;
 }
@@ -92,52 +97,98 @@ section {
     margin-top: 50px;
 }
 
-.hg-card {
+.hg-card, .hg-image-card, .hg-opinion-card {
     background-color: #FFFFFF;
     border-radius: 15px;
     box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
-    padding: 40px 40px 30px;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    margin-bottom: 20px;
+    margin-bottom: 60px;
     -moz-transition: all 0.3s;
 	-webkit-transition: all 0.3s;
-	transition: all 0.3s;
+    transition: all 0.3s;
+    padding-bottom: 30px;
 }
 
-.hg-card h2{
+.hg-card, .hg-opinion-card {
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-top: 40px;
+}
+
+.text-container {
+    padding: 0px 40px 20px;
+}
+
+.hg-card h2, .hg-image-card h2 {
     color: #293C72;
     font-size: 24px;
     margin-top: 30px;
+    cursor: default;
     transition: all 0.3s;
 }
 
-.hg-card h2:hover {
+.hg-opinion-card h2, .content-row h2 {
+    color: #293C72;
+    font-size: 24px;
+    cursor: default;
+    transition: all 0.3s;
+}
+
+.hg-card h2:hover, .hg-image-card h2:hover, .hg-opinion-card h2:hover, .content-row h1:hover {
     color: #597EB2;
 }
 
-.hg-card p {
+.hg-card p, .hg-image-card p, .hg-opinion-card p {
     font-size: 14px;
 }
 
-.hg-card:hover{
-    /* -webkit-transform:scale(1.025);
-    -moz-transform:scale(1.025);
-    -ms-transform:scale(1.025);
-    -o-transform:scale(1.025);
-     transform:scale(1.025); */
-
-    cursor: pointer;
+.hg-card:hover, .hg-image-card:hover, .hg-opinion-card:hover{
+    -webkit-transform:scale(1.0125);
+    -moz-transform:scale(1.0125);
+    -ms-transform:scale(1.0125);
+    -o-transform:scale(1.0125);
+     transform:scale(1.0125);
     box-shadow: 0px 5px 20px rgba(0, 0, 0, .17);
 }
 
 .hg-card-circle-img {
     border-radius: 50%;
-    background-color: #F9BEAF;
-    height: 100px;
-    width: 100px;
+    height: 130px;
+    width: 130px;
     margin: 0 auto;
+    background-size: cover;
+    background-position: center;
+    background-color: #f9f9f9;
+}
+
+.hg-opinion-img {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.hg-opinion-img p {
+    margin-bottom: 0px;
+    margin-left: 10px;
+}
+
+.opinion-img {
+    height: 60px;
+    width: 60px;
+    background-color: #f9f9f9;
+    float: left;
+    border: 5px solid white;
+    box-shadow: 0 0 0 1px #ffc871;
+    border-radius: 50%;
+    background-size: cover;
+    background-position: top;
+}
+
+.hg-card-img {
+    border-top-left-radius: inherit;
+    border-top-right-radius: inherit;
 }
 
 .readmore-btn {
@@ -146,6 +197,7 @@ section {
     padding: 9px 30px;
     font-size: 16px;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 .readmore-btn:hover {
@@ -176,6 +228,32 @@ section {
 .video-description {
     max-width: 90%;
     margin: 30px auto 0px;
+}
+
+.content-row {
+    margin-top: 50px;
+}
+
+.content-row .col-md-8 {
+    padding-left: 50px;
+}
+
+.content-row h1 {
+    color: #293C72;
+    font-size: 36px;
+    margin-top: 15px;
+    cursor: default;
+    transition: all 0.3s;
+}
+
+.street-img {
+    border-radius: 15px;
+    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
+}
+
+footer {
+    padding: 20px 0px;
+    text-align: center;
 }
 
 @media screen and (min-width: 1550px) {
