--- a/2019/10/housing-guide/style.css
+++ b/2019/10/housing-guide/style.css
@@ -47,6 +47,16 @@ section {
     transition: all 0.3s;
 }
 
+.crime-card .readmore-btn {
+    color: #ffffff;
+    background-color: #7FCEEA;
+    transition: all 0.3s;
+}
+
+.crime-card .readmore-btn:hover {
+    background-color: #36B2CE;
+}
+
 .section-primary .readmore-btn:hover, .content-row .readmore-btn:hover {
     color: #091930;
     background-color: #F2A43D;
@@ -249,6 +259,30 @@ section {
 .street-img {
     border-radius: 15px;
     box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
+}
+
+.crime-img {
+    margin-top: 60px;
+    margin-right: 200px;
+    margin-bottom: 100px;
+    background-image: url("https://snworksceo.imgix.net/dpn/22e3f1b5-6d90-40e1-8f94-736078457749.sized-1000x1000.jpg?");
+    height: 80vh;
+    border-radius: 15px;
+    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-items: flex-end;
+}
+
+.crime img {
+    display: none;
+}
+
+.crime-card {
+    width: 40%;
+    margin-left: auto;
+    margin-right: -150px;
+    margin-bottom: -100px;
+    text-align: initial;
 }
 
 footer {
