--- a/2019/10/housing-guide/style.css
+++ b/2019/10/housing-guide/style.css
@@ -47,13 +47,13 @@ section {
     transition: all 0.3s;
 }
 
-.crime-card .readmore-btn {
+.crime .readmore-btn {
     color: #ffffff;
     background-color: #7FCEEA;
     transition: all 0.3s;
 }
 
-.crime-card .readmore-btn:hover {
+.crime .readmore-btn:hover {
     background-color: #36B2CE;
 }
 
@@ -274,6 +274,10 @@ section {
 }
 
 .crime img {
+    /* display: none; */
+}
+
+.crime .content-row {
     display: none;
 }
 
@@ -295,5 +299,19 @@ footer {
         padding-bottom: 0;
         height: 810px;
         background-size: auto;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .crime-img {
+        display: none;
+    }
+
+    .crime .content-row {
+        display: inherit;
+    }
+
+    .content-row .col-md-8 {
+        padding-left: 15px;
     }
 }
